--- a/Trabalhos/2_MoonPatrolXNA/MoonPatrolXNA/MoonPatrolXNA/MoonPatrolXNA/MoonPatrolXNA.csproj
+++ b/Trabalhos/2_MoonPatrolXNA/MoonPatrolXNA/MoonPatrolXNA/MoonPatrolXNA/MoonPatrolXNA.csproj
@@ -72,11 +72,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameObject.cs" />
-    <Compile Include="Pedra.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Rock.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
