--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ TestResults
 *.sln.docstates
 
 # Build results
-[Dd]ebug/
+# [Dd]ebug/
 [Rr]elease/
 x64/
 *_i.c
@@ -98,8 +98,8 @@ csx
 AppPackages/
 
 # Others
-[Bb]in
-[Oo]bj
+# [Bb]in
+# [Oo]bj
 sql
 TestResults
 [Tt]est[Rr]esult*
