--- a/Trabalhos/BielWorld2/BielWorld/BielWorld/BielWorld.csproj
+++ b/Trabalhos/BielWorld2/BielWorld/BielWorld/BielWorld.csproj
@@ -71,6 +71,8 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="_Helicopter.cs" />
+    <Compile Include="_Helix.cs" />
     <Compile Include="_TransformOrientation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
