--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 /Trabalhos/BielWorld2/.vs
+/Trabalhos/BielWorld3/.vs
+/Conteúdos Fábio/AulaXNA3D001/.vs/AulaXNA3D001/v15/Server/sqlite3
