--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,4 @@ UpgradeLog*.XML
 /Trabalhos/BielWorld2/.vs
 /Trabalhos/BielWorld3/.vs
 /Conteúdos Fábio/AulaXNA3D001/.vs/AulaXNA3D001/v15/Server/sqlite3
+/Trabalhos/BielWorld4/.vs
