Shader inserido e funcionando

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@ UpgradeLog*.XML
 /Trabalhos/BielWorld3/.vs
 /Conteúdos Fábio/AulaXNA3D001/.vs/AulaXNA3D001/v15/Server/sqlite3
 /Trabalhos/BielWorld4/.vs
+/Trabalhos/BielWorld5/.vs
